line-wrap, fix restart on finish

--- a/tutor/styles/tutor.module.css
+++ b/tutor/styles/tutor.module.css
@@ -12,6 +12,7 @@
 .line {
   margin: 0;
   line-height: 28px;
+  overflow-wrap: break-word;
 }
 
 .line:empty:after {
